2010-05-05  Jason Merrill  <jason@redhat.com>

	PR debug/43370
	* c-common.c (handle_aligned_attribute): Respect
	ATTR_FLAG_TYPE_IN_PLACE.

2010-05-04  H.J. Lu  <hongjiu.lu@intel.com>

	Backport from mainline
	2010-05-04  H.J. Lu  <hongjiu.lu@intel.com>

	PR middle-end/43671
	* alias.c (true_dependence): Handle the same VALUE in x and mem.
	(canon_true_dependence): Likewise.
	(write_dependence_p): Likewise.

2010-05-02  Uros Bizjak  <ubizjak@gmail.com>

	* config/i386/i386.c (ix86_target_string): Output 'flags', not 'isa',
	when processing flag options.

2010-04-30  Eric Botcazou  <ebotcazou@adacore.com>

	* tree-ssa-loop-ivopts.c (may_be_unaligned_p): Check the alignment of
	the variable part of the offset as well.  Use highest_pow2_factor for
	all alignment checks.

2010-04-30  Jakub Jelinek  <jakub@redhat.com>

	PR c/43893
	* c-omp.c (c_finish_omp_for): Handle also EQ_EXPR.

2010-04-29  Jakub Jelinek  <jakub@redhat.com>

	* BASE-VER: Set to 4.4.5.
	* DEV-PHASE: Set to prerelease.

2010-04-29  Release Manager

	* GCC 4.4.4 released.

2010-04-21  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/43570
	* omp-low.c (scan_sharing_clauses): Don't scan_omp_op
	OMP_CLAUSE_DECL for OMP_CLAUSE_COPYPRIVATE.
	(lower_copyprivate_clauses): Use private var in outer
	context instead of original var.  Make sure the types
	are correct for VLAs.

2010-04-20  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/43337
	* tree-nested.c (convert_nonlocal_omp_clauses): OMP_CLAUSE_PRIVATE
	with non-local decl doesn't need chain.

2010-04-19  Jie Zhang  <jie@codesourcery.com>

	PR target/43662
	* reginfo.c (reinit_regs): Set caller_save_initialized_p
	to false.

2010-04-19 Ira Rosen <irar@il.ibm.com>

	PR tree-optimization/43771
	* tree-vect-analyze.c (vect_supported_load_permutation_p): Check
	that load permutation doesn't have gaps.

2010-04-18  Eric Botcazou  <ebotcazou@adacore.com>

	PR tree-optimization/43769
	* tree-sra.c (bitfield_overlaps_p): If the length of the element is